@@ -1,6 +1,7 @@
 package com.iss.eventorium.event.services;
 
 import com.iss.eventorium.event.dtos.agenda.ActivityRequestDto;
+import com.iss.eventorium.event.dtos.agenda.ActivityResponseDto;
 import com.iss.eventorium.event.dtos.event.*;
 import com.iss.eventorium.event.mappers.ActivityMapper;
 import com.iss.eventorium.event.mappers.EventMapper;
@@ -10,15 +11,20 @@ import com.iss.eventorium.event.models.Privacy;
 import com.iss.eventorium.event.repositories.EventRepository;
 import com.iss.eventorium.event.specifications.EventSpecification;
 import com.iss.eventorium.shared.models.PagedResponse;
+import com.iss.eventorium.shared.services.PdfService;
 import com.iss.eventorium.user.services.AuthService;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import net.sf.jasperreports.engine.JRException;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -27,6 +33,7 @@ public class EventService {
 
     private final EventRepository repository;
     private final AuthService authService;
+    private final PdfService pdfService;
 
     public EventDetailsDto getEventDetails(Long id) {
         Event event = find(id);
@@ -39,34 +46,30 @@ public class EventService {
         return events.stream().map(EventMapper::toSummaryResponse).collect(Collectors.toList());
     }
 
-    private String getUserCity(){  // If the user is logged in, it returns the city from the profile, otherwise defaults to "Novi Sad".
+    private String getUserCity() {  // If the user is logged in, it returns the city from the profile, otherwise defaults to "Novi Sad".
         if (authService.getCurrentUser() != null)
             return authService.getCurrentUser().getPerson().getCity().getName();
         return "Novi Sad";
     }
 
-    public List<EventSummaryResponseDto> getAll(){
-        List<Event> events = repository.findAll();
-        return events.stream().map(EventMapper::toSummaryResponse).collect(Collectors.toList());
+    public List<EventSummaryResponseDto> getAll() {
+        Specification<Event> specification = EventSpecification.filterByPrivacy(Privacy.OPEN);
+        return repository.findAll(specification).stream().map(EventMapper::toSummaryResponse).toList();
     }
 
     public PagedResponse<EventSummaryResponseDto> searchEvents(String keyword, Pageable pageable) {
-        if (keyword.isBlank())
-            return EventMapper.toPagedResponse(repository.findAll(pageable));
-
-        return EventMapper.toPagedResponse(repository.findByNameContainingAllIgnoreCase(keyword, pageable));
+        Specification<Event> specification = EventSpecification.filterByName(keyword);
+        return EventMapper.toPagedResponse(repository.findAll(specification, pageable));
     }
 
     public List<EventSummaryResponseDto> searchEvents(String keyword) {
-        List<Event> events = keyword.isBlank()
-                ? repository.findAll()
-                : repository.findByNameContainingAllIgnoreCase(keyword);
-
-        return events.stream().map(EventMapper::toSummaryResponse).toList();
+        Specification<Event> specification = EventSpecification.filterByName(keyword);
+        return repository.findAll(specification).stream().map(EventMapper::toSummaryResponse).toList();
     }
 
     public PagedResponse<EventSummaryResponseDto> getEventsPaged(Pageable pageable) {
-        return EventMapper.toPagedResponse(repository.findAll(pageable));
+        Specification<Event> specification = EventSpecification.filterByPrivacy(Privacy.OPEN);
+        return EventMapper.toPagedResponse(repository.findAll(specification, pageable));
     }
 
     public PagedResponse<EventSummaryResponseDto> filterEvents(EventFilterDto filter, Pageable pageable) {
@@ -75,7 +78,7 @@ public class EventService {
     }
 
     public Event find(Long id) {
-        return repository.findById(id).orElseThrow(() -> new EntityNotFoundException("Event not found with ID: " + id));
+        return repository.findById(id).orElseThrow(() -> new EntityNotFoundException("Event not found."));
     }
 
     public EventResponseDto createEvent(EventRequestDto eventRequestDto)  {
@@ -110,10 +113,23 @@ public class EventService {
             repository.save(event);
     }
 
+    public List<ActivityResponseDto> getAgenda(Long id) {
+        return find(id).getActivities().stream().map(ActivityMapper::toResponse).toList();
+    }
+
     public List<EventResponseDto> getDraftedEvents() {
         return repository.findByIsDraftTrueAndOrganizer_Id(authService.getCurrentUser().getId())
                 .stream()
                 .map(EventMapper::toResponse)
                 .toList();
+    }
+
+    public byte[] generatePdf(Long id) throws JRException {
+        Event event = find(id);
+        Map<String, Object> params = new HashMap<>();
+        params.put("reportTitle", "EVENT: " + event.getName());
+        params.put("generatedDate", LocalDate.now());
+        List<Event> data = List.of(event);
+        return pdfService.generate("/templates/event-details.jrxml", data, params);
     }
 }
